# ButterflyLens

./: .gitignore  .mcp.json  ALA_CONTRIBUTION.md  BUILD_WEEK_BASELINE.md  BUILD_WEEK_DELTA.md  CODEX_COLLABORATION.md  COMPLETION_STATUS.md  CONTRACT_TEST_COVERAGE.md  DARWIN_CORE_EXPORT.md  DATA_RIGHTS.md  DEMO_VIDEO.md  DEVPOST_ENTRY.md  FIRST_NATIONS_NAMES.md  HUMAN_DECISIONS.md  INTEGRATION_TEST_COVERAGE.md  JUDGE_GUIDE.md  LICENSE_DECISION.md  MEDIA_RIGHTS.md  MODERATION.md  OCCURRENCE_RELEASE.md  OPENAI_IMPLEMENTATION.md  PITCH_DECK.md  PRIVACY.md  README.md  SECURITY_RELEASE_REVIEW.md  SENSITIVE_LOCATIONS.md  SUPABASE_MCP.md  THIRD_PARTY_LICENSES.md  UPSTREAM_BIOMINER.md  UPSTREAM_TAXALENS.md  pyproject.toml
policies/: community-privacy-policy.v1.json  layered-consensus.md  representative-audit.md  reviewer-reliability.md
provenance/: biominer_migration_manifest.yaml  commits.jsonl  completion-audit.schema.json  completion_audit.v1.json  completion_audit.v2.json  data_rights_manifest.json  dependency_licenses.json  githits.jsonl  model_usage.jsonl  review_attestations.yaml  taxalens_migration_manifest.yaml  valyu.jsonl
scripts/: build_ala_baseline.py  build_butterfly_names.py  build_butterfly_taxonomy.py  build_current_completion_audit.py  build_darwin_core_evidence_package.py  build_gbif_evidence.py  build_openai_evaluations.py  build_openai_replay.py  build_openai_tool_contracts.py  build_public_ala_map.py  build_reference_admission.py  build_reference_import.py  build_reference_quality_diagnostics.py  build_reference_yoloe_readiness.py  verify_licensing.py  (+11 more)
(+480 files in other folders)
